[package]
name = "rollz"
version = "0.1.0"
description = "A super-simple Rust crate that allows you to... roll dice! What else would you need from a crate?"
keywords = ["die", "dice", "roll", "random", "dungeon and dragons"]
categories = ["games"]
repository = "https://github.com/lmammino/rollz"
documentation = "https://github.com/lmammino/rollz"
readme = "README.md"
authors = ["Luciano Mammino"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
